MGMT-20717: Disable certificate verification for bmh

--- a/deploy/operator/ztp/baremetalHost.j2
+++ b/deploy/operator/ztp/baremetalHost.j2
@@ -64,6 +64,7 @@ spec:
   bmc:
     address: '{{ host["driver_info"]["address"] }}'
     credentialsName: '{{ host["name"] }}-bmc-secret'
+    disableCertificateVerification: true
 {% endif %}
 {% set ns.counter = ns.counter + 1 %}
 {% endfor %}
